lab1/vm-1/serts/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
  - hosts:
    - test.k8s.labs.itmo.loc
    secretName: k8s-tls-secret
  rules:
  - host: test.k8s.labs.itmo.loc
    http:
      paths:
      - path: /non-existent-path
        pathType: Prefix
        backend:
          service:
            name: non-existent-service
            port:
              number: 80
